--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -19,3 +19,9 @@
   justify-content: space-between;
   width: 100%;
 }
+
+@media (max-width: 930px) {
+  #Service-container {
+    flex-wrap: wrap;
+  }
+}
